; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngfix.c_crc_read_many.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngfix.c_crc_read_many.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i64 }

@EOF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i64)* @crc_read_many to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @crc_read_many(%struct.file* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.file*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = icmp sgt i64 %8, 0
  br i1 %9, label %10, label %33

10:                                               ; preds = %2
  %11 = load %struct.file*, %struct.file** %4, align 8
  %12 = getelementptr inbounds %struct.file, %struct.file* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %6, align 8
  br label %14

14:                                               ; preds = %25, %10
  %15 = load %struct.file*, %struct.file** %4, align 8
  %16 = call i32 @read_byte(%struct.file* %15)
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @EOF, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %34

21:                                               ; preds = %14
  %22 = load i64, i64* %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = call i64 @crc_one_byte(i64 %22, i32 %23)
  store i64 %24, i64* %6, align 8
  br label %25

25:                                               ; preds = %21
  %26 = load i64, i64* %5, align 8
  %27 = add nsw i64 %26, -1
  store i64 %27, i64* %5, align 8
  %28 = icmp sgt i64 %27, 0
  br i1 %28, label %14, label %29

29:                                               ; preds = %25
  %30 = load i64, i64* %6, align 8
  %31 = load %struct.file*, %struct.file** %4, align 8
  %32 = getelementptr inbounds %struct.file, %struct.file* %31, i32 0, i32 0
  store i64 %30, i64* %32, align 8
  br label %33

33:                                               ; preds = %29, %2
  store i32 1, i32* %3, align 4
  br label %34

34:                                               ; preds = %33, %20
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @read_byte(%struct.file*) #1

declare dso_local i64 @crc_one_byte(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
